--- a/site/config.toml
+++ b/site/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-languageCode = "en-us"
+languageCode = "en-gb" #Initial configuration reset
 title = "Locality"
 
 ## As of v0.20, all content files include a default "categories" value that's the same as the section. This was a cheap future-proofing method and should/could be changed accordingly.
