--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -11,6 +11,9 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Description", name: "description", widget: "text", default: "It works!"}
+      - {label: "String", name: "string", widget: "string", default: "It works!"}
+
       - {label: "Room name", name: "title", widget: "string", default: "", required: true }
       - {label: "Price in GBP, £", name: "price", widget: "number", default: "1000", required: true }
       - {label: "Bedrooms", name: "bedroom", widget: "number", default: "8", valueType: "int", min: "1", max: "999", required: false }
