Config meta for data entry

--- a/site/config.toml
+++ b/site/config.toml
@@ -29,6 +29,9 @@ theme = "ga-hugo-theme"
   [taxonomies]
     #sport = "sports"
     #practice = "practices"
+    description = "description"
+    string = "string"
+
     road = "road"
     district = "district"
     region = "region"
