--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -11,10 +11,10 @@ collections: # A list of collections the CMS should be able to edit
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Description", name: "description", widget: "text", default: "It works!"}
+      #- {label: "Description", name: "description", widget: "text", default: "It works!"}
       - {label: "String", name: "string", widget: "string", default: "It works!"}
 
-- {label: "Title", name: "title", widget: "string", default: "", required: true }
+      - {label: "Title", name: "title", widget: "string", default: "", required: true }
 
       - {label: "Room name", name: "title", widget: "string", default: "District & room Nº" }
       - {label: "Price in GBP, £", name: "price", widget: "number", default: "1000", required: true }
