`locality.site` with `analytics.inspiredlabs.co.uk` by Matomo

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,9 +1,6 @@
 baseURL = "https://locality.netlify.com/" #baseURL = "./" or "https://jsonfeed.netlify.com/"
 languageCode = "en-gb"
-title = "first_site"
-theme = "ga-hugo-theme"
-
-
+title = "Localist.site"
 
 
 [mediaTypes]
